<resources>
    <string name="app_name">App Ventas</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Agente</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Acceder</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tablero">TableroActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="card_facturado">Facturado</string>
    <string name="card_VentasTotales">Ventas Totales</string>
    <string name="action_cuota_venta">Cuota de Venta</string>
    <string name="action_producto_facturado">Producto de Facturado</string>
    <string name="action_recuperacion_efectivo">Recuperacion de Efectivo</string>
    <string name="action_info_cliente">Info. Cliente</string>
    <string name="copy_right_1">Copyright © 2017, UNIMARK S.A.</string>
    <string name="copy_right_2">v1.1.0</string>
    <string name="act_Clientes">Clientes</string>
    <string name="act_plan_trabajo">Plan de Trabajo</string>
    <string name="app_label">Buscar</string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="search">Buscar</string>


    <string name="action_today"></string>
    <string name="action_day_view">Hoy</string>
    <string name="action_three_day_view">3 dias</string>
    <string name="action_week_view">Semana</string>
    <string name="title_activity_basic">Basico</string>
    <string name="title_activity_asynchronous"></string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="title_activity_menu">MenuActivity</string>


</resources>
