<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info_cliente"
        android:orderInCategory="100"
        android:title="@string/action_info_cliente"
        app:showAsAction="never"
        android:visible="true"/>
    <item
        android:id="@+id/action_recuperacion_efectivo"
        android:orderInCategory="100"
        android:title="@string/action_recuperacion_efectivo"
        app:showAsAction="never"
        android:visible="true"/>
    <item
        android:id="@+id/action_producto_facturado"
        android:orderInCategory="100"
        android:title="@string/action_producto_facturado"
        app:showAsAction="never"
        android:visible="true"/>
    <item
        android:id="@+id/action_cuota_venta"
        android:orderInCategory="100"
        android:title="@string/action_cuota_venta"
        app:showAsAction="never"
        android:visible="true"/>


</menu>
